# digimon-pet

./: .gitattributes  .gitignore  Digimon Pet.bat  Digimon Pet.command  Digimon Pet.vbs  README.md  pyproject.toml
Digimon Pet.app/Contents/: Info.plist
assets/sprites/: README.md
data/: artwork_downloads.json  default_save.json  dw1_digivolutions.json  dw1_digivolutions.schema.json  dw1_roster.json  dw1_sprite_manifest.json  dw1_sprite_report.md  evolution_rules.json  fusions.json  items.json  species.json  sprite_downloads.json  sprite_sources.json
docs/mockups/: rebirth-stat-allocation.html
packaging/macos/: digimon_pet.spec
packaging/windows/: launcher_update_check.ps1
tests/: test_artwork_runtime.py  test_care_actions.py  test_data_loading.py  test_debug_settings.py  test_digimon_catalog.py  test_digimon_manager_entrypoint.py  test_digimon_manager_window.py  test_dw1_digivolutions_data.py  test_evolution.py  test_evolution_intel.py  test_evolution_tree.py  test_fusions.py  test_inventory_window.py  test_item_manager_window.py  test_items.py  test_launchers.py  test_lifecycle.py  test_macos_launcher.py  test_main.py  test_main_window.py  test_models.py  test_network_integration.py  test_network_settings.py  test_network_window.py  test_paths.py  test_penc_import.py  test_pendulum_sprite_import.py  test_pet_widget.py  test_presence_service.py  test_save_store.py  test_sprite_frames.py  test_sprite_pipeline.py  test_sprite_runtime.py  test_stats_window.py  test_tray.py  test_window_positioning.py  test_windows_launcher_update_check.py
(+68 files in other folders)
