[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digimon-pet"
version = "0.1.0"
description = "Desktop virtual pet scaffold inspired by Digimon World 1."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
digimon-pet = "digimon_pet.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
